Fix visual regressions caused by invalid CSS values (#172)
Removes the extra space between the font size and unit to make the CSS valid. Closes #171.

--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -471,7 +471,7 @@ optgroup,
 textarea {
 	color: var(--global-font-color);
 	font-family: var(--global-font-family);
-	font-size: calc(var(--global-font-size) / 16)rem;
+	font-size: calc(var(--global-font-size) / 16rem);
 	line-height: var(--global-font-line-height);
 }
 /* stylelint-enable */
